Test Sandbox Project/src/objects/QA_Agent_Answer__c.object
<CustomObject>
    <fields>
        <fullName>A_FE_01__c</fullName>
        <label>A_FE_01</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Tidak Terjadi</fullName>
                </value>
                <value>
                    <fullName>1 - Terjadi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_FE_02__c</fullName>
        <label>A_FE_02</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Tidak Terjadi</fullName>
                </value>
                <value>
                    <fullName>1 - Terjadi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_FE_03__c</fullName>
        <label>A_FE_03</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Tidak Terjadi</fullName>
                </value>
                <value>
                    <fullName>1 - Terjadi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_FE_Total2__c</fullName>
        <label>A_FE_Total2</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_FE_Total_TT__c</fullName>
        <formula>IF (CONTAINS(TEXT(A_FE_01__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_02__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_03__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_04__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_05__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_06__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_07__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_08__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_09__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_10__c),&apos;0&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A_FE_Total (TT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_FE_Total__c</fullName>
        <formula>IF (CONTAINS(TEXT(A_FE_01__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_02__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_03__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_04__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_05__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_06__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_07__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_08__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_09__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_FE_10__c),&apos;1&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A_FE_Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_NFE_01__c</fullName>
        <label>A_NFE_01</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Tidak Terjadi</fullName>
                </value>
                <value>
                    <fullName>1 - Terjadi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_NFE_02__c</fullName>
        <label>A_NFE_02</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Tidak Terjadi</fullName>
                </value>
                <value>
                    <fullName>1 - Terjadi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_NFE_03__c</fullName>
        <label>A_NFE_03</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - Tidak Terjadi</fullName>
                </value>
                <value>
                    <fullName>1 - Terjadi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A_NFE_Total2__c</fullName>
        <label>A_NFE_Total2</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_NFE_Total_TT__c</fullName>
        <formula>IF (CONTAINS(TEXT(A_NFE_01__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_02__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_03__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_04__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_05__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_06__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_07__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_08__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_09__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_10__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_11__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_12__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_13__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_14__c),&apos;0&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_15__c),&apos;0&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A_NFE_Total (TT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_NFE_Total__c</fullName>
        <formula>IF (CONTAINS(TEXT(A_NFE_01__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_02__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_03__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_04__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_05__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_06__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_07__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_08__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_09__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_10__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_11__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_12__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_13__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_14__c),&apos;1&apos;) , 1, 0) +
IF (CONTAINS(TEXT(A_NFE_15__c),&apos;1&apos;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A_NFE_Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>QA Agent Answer</relationshipLabel>
        <relationshipName>QA_Agent_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BS_QA_1_Dewa__c</fullName>
        <defaultValue>VALUE($Label.BS_QA_1_Dewa)</defaultValue>
        <label>BS_QA_1_Dewa</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_QA_2_Keren__c</fullName>
        <defaultValue>VALUE($Label.BS_QA_2_Keren)</defaultValue>
        <label>BS_QA_2_Keren</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_QA_3_Oleh__c</fullName>
        <defaultValue>VALUE($Label.BS_QA_3_Oleh)</defaultValue>
        <label>BS_QA_3_Oleh</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_QA_4_Mayan__c</fullName>
        <defaultValue>VALUE($Label.BS_QA_4_Mayan)</defaultValue>
        <label>BS_QA_4_Mayan</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BS_QA_5_Cupu__c</fullName>
        <defaultValue>VALUE($Label.BS_QA_5_Cupu)</defaultValue>
        <label>BS_QA_5_Cupu</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_FE_01__c</fullName>
        <formula>IF ( ISPICKVAL(A_FE_01__c,&apos;1 - Terjadi&apos;),  QA_Question__r.Bobot_FE_01__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bobot_FE_01</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_FE_02__c</fullName>
        <formula>IF ( ISPICKVAL(A_FE_02__c,&apos;1 - Terjadi&apos;),  QA_Question__r.Bobot_FE_02__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bobot_FE_02</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_FE_03__c</fullName>
        <formula>IF ( ISPICKVAL(A_FE_03__c,&apos;1 - Terjadi&apos;),  QA_Question__r.Bobot_FE_03__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bobot_FE_03</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_NFE_01__c</fullName>
        <formula>IF ( ISPICKVAL(A_NFE_01__c,&apos;1 - Terjadi&apos;),  QA_Question__r.Bobot_NFE_01__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bobot_NFE_01</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_NFE_02__c</fullName>
        <formula>IF ( ISPICKVAL(A_NFE_02__c,&apos;1 - Terjadi&apos;),  QA_Question__r.Bobot_NFE_02__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bobot_NFE_02</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bobot_NFE_03__c</fullName>
        <formula>IF ( ISPICKVAL(A_NFE_03__c,&apos;1 - Terjadi&apos;),  QA_Question__r.Bobot_NFE_03__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bobot_NFE_03</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>QA Agent Answer</relationshipLabel>
        <relationshipName>QA_Agent_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_s_Name__c</fullName>
        <label>Customer&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE(Document_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Document Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ext_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>User + Month + Year + Week</inlineHelpText>
        <label>Ext ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FE_Attribute__c</fullName>
        <label>FE Attribute</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_Time__c</fullName>
        <label>Hold Time</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_ID__c</fullName>
        <formula>User_Agent__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capt Agent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capt Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Agent_Answer1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NFE_Attribute__c</fullName>
        <label>NFE Attribute</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nomor_Telepon__c</fullName>
        <label>Nomor Telepon</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Observer_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Observer User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Agent_Answer2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Observer__c</fullName>
        <label>Observer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perihal__c</fullName>
        <label>Perihal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Periode__c</fullName>
        <formula>IF ( MONTH(DATEVALUE(Document_Date__c)) == 1, &apos;January&apos;,
IF ( MONTH(DATEVALUE(Document_Date__c)) == 2, &apos;February&apos;,
IF ( MONTH(DATEVALUE(Document_Date__c)) == 3, &apos;March&apos;,
IF ( MONTH(DATEVALUE(Document_Date__c)) == 4, &apos;April&apos;,
IF ( MONTH(DATEVALUE(Document_Date__c)) == 5, &apos;May&apos;,
IF ( MONTH(DATEVALUE(Document_Date__c)) == 6, &apos;June&apos;,
IF ( MONTH(DATEVALUE(Document_Date__c)) == 7, &apos;July&apos;,
IF ( MONTH(DATEVALUE(Document_Date__c)) == 8, &apos;August&apos;,
IF ( MONTH(DATEVALUE(Document_Date__c)) == 9, &apos;September&apos;,
IF ( MONTH(DATEVALUE(Document_Date__c)) == 10, &apos;October&apos;,
IF ( MONTH(DATEVALUE(Document_Date__c)) == 11, &apos;November&apos;,
IF ( MONTH(DATEVALUE(Document_Date__c)) == 12, &apos;December&apos;,&apos;&apos;))))))))))))
&amp;&apos; &apos;&amp;TEXT(Year(DATEVALUE(Document_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_FE_01__c</fullName>
        <label>QA_FE_01</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_FE_02__c</fullName>
        <label>QA_FE_02</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_FE_03__c</fullName>
        <label>QA_FE_03</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_NFE_01__c</fullName>
        <label>QA_NFE_01</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_NFE_02__c</fullName>
        <label>QA_NFE_02</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_NFE_03__c</fullName>
        <label>QA_NFE_03</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_Periode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Periode</label>
        <referenceTo>QA_Periode__c</referenceTo>
        <relationshipLabel>QA Agent Answer</relationshipLabel>
        <relationshipName>QA_Agent_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Question</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>QA_Question__c.Type_Agent__c</field>
                <operation>equals</operation>
                <valueField>$Source.Type_Agent__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QA_Question__c</referenceTo>
        <relationshipLabel>QA Agent Answer</relationshipLabel>
        <relationshipName>QA_Agent_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Q_FE_01__c</fullName>
        <label>Q_FE_01</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_FE_02__c</fullName>
        <label>Q_FE_02</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_FE_03__c</fullName>
        <label>Q_FE_03</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_NFE_01__c</fullName>
        <label>Q_NFE_01</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_NFE_02__c</fullName>
        <label>Q_NFE_02</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_NFE_03__c</fullName>
        <label>Q_NFE_03</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Total_Bobot_FE__c</fullName>
        <label>Q_Total_Bobot_FE</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Total_Bobot_NFE__c</fullName>
        <label>Q_Total_Bobot_NFE</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_FE_01__c</fullName>
        <label>S_FE_01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_FE_02__c</fullName>
        <label>S_FE_02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_FE_03__c</fullName>
        <label>S_FE_03</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_NFE_01__c</fullName>
        <label>S_NFE_01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_NFE_02__c</fullName>
        <label>S_NFE_02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_NFE_03__c</fullName>
        <label>S_NFE_03</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_No__c</fullName>
        <label>Sample No</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Submit_1__c</fullName>
        <label>Score Submit 1</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Submit_2__c</fullName>
        <label>Score Submit 2</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Submit_3__c</fullName>
        <label>Score Submit 3</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>(QA_Question__r.Bobot_FE__c * A_FE_Total2__c / FE_Attribute__c * 100)
+
(QA_Question__r.Bobot_NFE__c * A_NFE_Total2__c / NFE_Attribute__c * 100)</description>
        <formula>(QA_Question__r.Bobot_FE__c * Total_Bobot_FE2__c / Q_Total_Bobot_FE__c * 100)
+
(QA_Question__r.Bobot_NFE__c * Total_Bobot_NFE2__c / Q_Total_Bobot_NFE__c * 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_to_Capt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share to Capt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Share_to_User_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Share to User Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skala_Penilaian__c</fullName>
        <formula>IF (Score__c &gt;=  Value($Label.BS_QA_1_Dewa), &quot;Dewa&quot;,
IF (Score__c &gt;= Value($Label.BS_QA_2_Keren), &quot;Keren Abiz&quot;,
IF (Score__c &gt;= Value($Label.BS_QA_3_Oleh), &quot;Oleh Uga&quot;,
IF (Score__c &gt;= Value($Label.BS_QA_4_Mayan), &quot;Mayanlah&quot;,
IF (Score__c &gt;= Value($Label.BS_QA_5_Cupu), &quot;Cupu&quot;,&quot;Welcome Badge&quot;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skala Penilaian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Waiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <label>Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TL_FE_01__c</fullName>
        <label>TL_FE_01</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TL_FE_02__c</fullName>
        <label>TL_FE_02</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TL_FE_03__c</fullName>
        <label>TL_FE_03</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TL_NFE_01__c</fullName>
        <label>TL_NFE_01</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TL_NFE_02__c</fullName>
        <label>TL_NFE_02</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TL_NFE_03__c</fullName>
        <label>TL_NFE_03</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Observasi__c</fullName>
        <label>Time Observasi</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Bobot_FE2__c</fullName>
        <label>Total_Bobot_FE2</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bobot_FE__c</fullName>
        <formula>IF(ISBLANK(S_FE_01__c), 0, Bobot_FE_01__c)+
IF(ISBLANK(S_FE_02__c), 0, Bobot_FE_02__c)+
IF(ISBLANK(S_FE_03__c), 0, Bobot_FE_03__c)+
IF(ISBLANK(S_FE_04__c), 0, Bobot_FE_04__c)+
IF(ISBLANK(S_FE_05__c), 0, Bobot_FE_05__c)+
IF(ISBLANK(S_FE_06__c), 0, Bobot_FE_06__c)+
IF(ISBLANK(S_FE_07__c), 0, Bobot_FE_07__c)+
IF(ISBLANK(S_FE_08__c), 0, Bobot_FE_08__c)+
IF(ISBLANK(S_FE_09__c), 0, Bobot_FE_09__c)+
IF(ISBLANK(S_FE_10__c), 0, Bobot_FE_10__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bobot FE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bobot_NFE2__c</fullName>
        <label>Total_Bobot_NFE2</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bobot_NFE__c</fullName>
        <formula>IF(ISBLANK(S_NFE_01__c), 0, Bobot_NFE_01__c)+
IF(ISBLANK(S_NFE_02__c), 0, Bobot_NFE_02__c)+
IF(ISBLANK(S_NFE_03__c), 0, Bobot_NFE_03__c)+
IF(ISBLANK(S_NFE_04__c), 0, Bobot_NFE_04__c)+
IF(ISBLANK(S_NFE_05__c), 0, Bobot_NFE_05__c)+
IF(ISBLANK(S_NFE_06__c), 0, Bobot_NFE_06__c)+
IF(ISBLANK(S_NFE_07__c), 0, Bobot_NFE_07__c)+
IF(ISBLANK(S_NFE_08__c), 0, Bobot_NFE_08__c)+
IF(ISBLANK(S_NFE_09__c), 0, Bobot_NFE_09__c)+
IF(ISBLANK(S_NFE_10__c), 0, Bobot_NFE_10__c)+
IF(ISBLANK(S_NFE_11__c), 0, Bobot_NFE_11__c)+
IF(ISBLANK(S_NFE_12__c), 0, Bobot_NFE_12__c)+
IF(ISBLANK(S_NFE_13__c), 0, Bobot_NFE_13__c)+
IF(ISBLANK(S_NFE_14__c), 0, Bobot_NFE_14__c)+
IF(ISBLANK(S_NFE_15__c), 0, Bobot_NFE_15__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bobot NFE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Agent__c</fullName>
        <label>Type Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Resolution Center</fullName>
                </value>
                <value>
                    <fullName>Master Outbound</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Master Outbound 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Probation__c</fullName>
        <label>Type Probation ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Probation</fullName>
                </value>
                <value>
                    <fullName>Karyawan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Agent_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QA Agent Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Periode__c</columns>
        <columns>Week__c</columns>
        <columns>Type_Agent__c</columns>
        <columns>User_Agent__c</columns>
        <columns>Observer__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Score__c</columns>
        <columns>Skala_Penilaian__c</columns>
        <columns>Time_Observasi__c</columns>
        <columns>A_NFE_Total2__c</columns>
        <columns>A_FE_Total2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllAhmad</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Periode__c</columns>
        <columns>Week__c</columns>
        <columns>Type_Agent__c</columns>
        <columns>User_Agent__c</columns>
        <columns>Observer__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Score__c</columns>
        <columns>Skala_Penilaian__c</columns>
        <columns>Time_Observasi__c</columns>
        <columns>A_NFE_Total2__c</columns>
        <columns>A_FE_Total2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Agent__c</field>
            <operation>equals</operation>
            <value>Ahmad Danial</value>
        </filters>
        <label>All Ahmad</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CC_week_1</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Periode__c</columns>
        <columns>Week__c</columns>
        <columns>Type_Agent__c</columns>
        <columns>User_Agent__c</columns>
        <columns>Observer__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Score__c</columns>
        <columns>Skala_Penilaian__c</columns>
        <columns>Time_Observasi__c</columns>
        <columns>A_NFE_Total2__c</columns>
        <columns>A_FE_Total2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type_Agent__c</field>
            <operation>equals</operation>
            <value>Call Center</value>
        </filters>
        <filters>
            <field>Week__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Score__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>All CC week 1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Next_Month</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Periode__c</columns>
        <columns>Week__c</columns>
        <columns>Type_Agent__c</columns>
        <columns>User_Agent__c</columns>
        <columns>Observer__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Score__c</columns>
        <columns>Skala_Penilaian__c</columns>
        <columns>Time_Observasi__c</columns>
        <columns>A_NFE_Total2__c</columns>
        <columns>A_FE_Total2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>Observer_User__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>yufan</value>
        </filters>
        <label>All - Next Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Riri_s_agent</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Periode__c</columns>
        <columns>Week__c</columns>
        <columns>Type_Agent__c</columns>
        <columns>User_Agent__c</columns>
        <columns>Observer__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Score__c</columns>
        <columns>Skala_Penilaian__c</columns>
        <columns>Time_Observasi__c</columns>
        <columns>A_NFE_Total2__c</columns>
        <columns>A_FE_Total2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Agent__c</field>
            <operation>equals</operation>
            <value>Ahmad Danial,Taufik Susanto</value>
        </filters>
        <label>All Riri&apos;s agent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Taufik_agent</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Periode__c</columns>
        <columns>Week__c</columns>
        <columns>Type_Agent__c</columns>
        <columns>User_Agent__c</columns>
        <columns>Observer__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Score__c</columns>
        <columns>Skala_Penilaian__c</columns>
        <columns>Time_Observasi__c</columns>
        <columns>A_NFE_Total2__c</columns>
        <columns>A_FE_Total2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Agent__c</field>
            <operation>equals</operation>
            <value>Taufik Susanto</value>
        </filters>
        <label>All Taufik agent</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_This_Month</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Periode__c</columns>
        <columns>Week__c</columns>
        <columns>Sample_No__c</columns>
        <columns>Type_Agent__c</columns>
        <columns>User_Agent__c</columns>
        <columns>Observer__c</columns>
        <columns>Document_Date__c</columns>
        <columns>Score__c</columns>
        <columns>Skala_Penilaian__c</columns>
        <columns>Time_Observasi__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Observer_User__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>Yufan</value>
        </filters>
        <label>All - This Month</label>
        <language>en_US</language>
    </listViews>
</CustomObject>